게시판 마이그레이션

--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/info/view.html
@@ -129,11 +129,13 @@ $(window).on("load", function() {
 });
 
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
-	
-	$("#pPartNo").on("click", function() {
-		$(this).select();
-	});	
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			$("#pPartNo").val(value);
+			doSearch();
+		}
+	});
 });
 
 function doSearch()
