--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/backorder/list.html
@@ -69,7 +69,13 @@
 	
 <script>
 $(document).ready(function() {
-	_setPartAutocomplete($("#pOrderPartNo"));
+	_setPartAutocomplete($("#pOrderPartNo"), {
+		select: function(label, value, event)
+		{
+			$("#pOrderPartNo").val(value);
+			doSearch();
+		}
+	});
 });
 
 let $tableObj;
