--- a/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/export/info/view.html
@@ -138,11 +138,13 @@ $(window).on("load", function() {
 });
 
 $(document).ready(function() {
-	_setPartAutocomplete($("#pPartNo"));
-	
-	$("#pPartNo").on("click", function() {
-		$(this).select();
-	});		
+	_setPartAutocomplete($("#pPartNo"), {
+		select: function(label, value, event)
+		{
+			$("#pPartNo").val(value);
+			doSearch();
+		}
+	});
 });
 
 function doSearch()
